[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/creepyshort.wav" type="AudioStream" id=2]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.556863, 0, 0, 1 )

[sub_resource type="CapsuleShape" id=4]

[sub_resource type="CapsuleShape" id=5]

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Eyes" type="MeshInstance" parent="."]
transform = Transform( 7.96294e-15, 6.51683e-08, 0.4, 0.3, -6.51683e-08, 0, 4.88762e-08, 0.4, -6.51683e-08, 0, 1, -0.507597 )
mesh = SubResource( 1 )
material/0 = null

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Area" type="Area" parent="."]

[node name="CollisionPolygon" type="CollisionPolygon" parent="Area"]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, 0, 0, -1.15815 )
polygon = PoolVector2Array( 0, 0, 20, -8, 20, 8 )

[node name="DamageBox" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DamageBox"]
transform = Transform( 1.5, 0, 0, 0, -2.44381e-07, -1.5, 0, 1.5, -2.44381e-07, 0, 0, 0 )
shape = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="DamageBox" to="." method="_on_DamageBox_body_entered"]
